# OnTheFly-KMP

./: .gitignore  BRIDGE_API_REFERENCE.md  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: publish.yml
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/nativeInterop/cinterop/: quickjs.def
devserver/: STOCK_APP_FLOW_CASES.md  jsconfig.json  server.py  start.sh
devserver/scripts/: version.json
devserver/scripts/_base/: ui.js  utils.js
devserver/scripts/_libs/: appState.js  stockBottomNav.js  stockCandleData.js  stockData.js  stockI18n.js  stockTheme.js
devserver/scripts/_modules/: dataHelper.js
devserver/scripts/api-demo/: manifest.json
devserver/scripts/demo-app/: manifest.json
devserver/scripts/home/: main.js  theme.js
devserver/scripts/languages/: en.json  vi.json
devserver/scripts/popup-fullscreen/: main.js
devserver/scripts/screens/api-demo/: main.js  manifest.json  theme.js
devserver/scripts/screens/components-demo/: main.js  manifest.json  theme.js
devserver/scripts/screens/demo-app/: main.js  manifest.json
devserver/scripts/screens/detail-app/: main.js  manifest.json  theme.js
devserver/scripts/screens/home/: main.js  manifest.json
devserver/scripts/screens/popup-confirm/: main.js  manifest.json
devserver/scripts/screens/popup-fullscreen/: main.js  manifest.json
devserver/scripts/screens/stock-account/: main.js  manifest.json  theme.js
devserver/scripts/screens/stock-chart/: main.js  manifest.json  theme.js
devserver/scripts/screens/stock-dashboard/: main.js  manifest.json  theme.js
devserver/scripts/screens/stock-detail/: main.js  (+2 more)
devserver/types/: onthefly.d.ts
gradle/: libs.versions.toml
iosApp/iosApp/: ContentView.swift  Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
native/: CMakeLists.txt  bridge_desktop.cpp
native/ios/: build_ios.sh  onthefly_bridge.c  onthefly_bridge.h
native/rust/: Cargo.toml  build.rs  build_android.sh  build_desktop.sh  build_ios.sh  quickjs_wrapper.c
native/rust/src/: engine.rs  ios_bridge.rs  jni_bridge.rs  lib.rs  quickjs_sys.rs
onthefly-engine/: build.gradle.kts
onthefly-engine/src/androidMain/cpp/: CMakeLists.txt  bridge.cpp
(+163 files in other folders)
