[package]
name = "onthefly-engine"
version = "1.0.0"
edition = "2021"

[lib]
name = "onthefly_engine"
crate-type = ["cdylib", "staticlib"]

[target.'cfg(not(target_os = "ios"))'.dependencies]
jni = "0.21"

[build-dependencies]
cc = "1.2"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = "symbols"
